--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,38 @@
 @import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap");
+.navbar {
+  font-family: "Playfair Display", serif;
+  font-weight: 500;
+  background-color: #121618;
+  color: #F4F1EC;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 10px 50px;
+}
+.navbar__links, .navbar__buttons {
+  display: flex;
+  padding: 0;
+}
+.navbar__links li, .navbar__buttons li {
+  list-style: none;
+}
+.navbar__links li.active, .navbar__buttons li.active {
+  font-weight: 800;
+}
+.navbar__links a, .navbar__buttons a {
+  display: block;
+  color: inherit;
+  text-decoration: none;
+  padding: 7px 13px;
+}
+.navbar__links a:hover, .navbar__buttons a:hover {
+  background-color: #800020;
+}
+
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
 
 /*# sourceMappingURL=styles.css.map */
