--- a/scss/_highlights.scss
+++ b/scss/_highlights.scss
@@ -51,6 +51,10 @@
                 cursor: pointer;
                 margin-left: auto;
                 margin-top: 30px;
+
+                &:hover {
+                    background-color: $bordeaux;
+                }
             }
         }
     }
