--- a/styles.css
+++ b/styles.css
@@ -182,5 +182,53 @@ body {
   margin-left: auto;
   margin-top: 30px;
 }
+.highlights__gallery .post button:hover {
+  background-color: #800020;
+}
+
+.about {
+  background-color: #A28140;
+  padding: 70px 10%;
+}
+.about .caption {
+  margin-bottom: 60px;
+}
+.about .caption h1 {
+  font-size: 48px;
+  font-weight: 500;
+  color: #F4F1EC;
+  margin-bottom: 20px;
+}
+.about .caption p {
+  font-size: 20px;
+  font-weight: 600;
+  letter-spacing: 1px;
+}
+.about .content {
+  display: flex;
+  gap: 80px;
+}
+.about .content__text {
+  width: 100%;
+  height: 100%;
+}
+.about .content__text h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+  line-height: 25px;
+}
+.about .content__text p {
+  font-size: 14px;
+  font-weight: 600;
+  line-height: 25px;
+  letter-spacing: 1px;
+}
+.about .content__text__container:not(:last-child) {
+  margin-bottom: 50px;
+}
+.about .content__image {
+  width: 100%;
+}
 
 /*# sourceMappingURL=styles.css.map */
