--- a/styles.css
+++ b/styles.css
@@ -231,4 +231,35 @@ body {
   width: 100%;
 }
 
+.features {
+  background-color: #121618;
+  padding: 70px 10%;
+}
+.features ul {
+  display: flex;
+  justify-content: space-between;
+}
+.features ul li {
+  width: 350px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+  text-align: center;
+}
+.features ul li img {
+  width: 82px;
+  height: 82px;
+  margin: 0 auto;
+}
+.features ul li h3 {
+  font-size: 20px;
+  font-weight: 600;
+}
+.features ul li p {
+  font-size: 14px;
+  font-weight: 600;
+  letter-spacing: 1px;
+  line-height: 25px;
+}
+
 /*# sourceMappingURL=styles.css.map */
