--- a/styles.css
+++ b/styles.css
@@ -390,4 +390,55 @@ body {
   color: #F4F1EC;
 }
 
+footer {
+  background-color: #121618;
+  color: #F4F1EC;
+  padding-inline: 10%;
+  padding-top: 70px;
+  padding-bottom: 15px;
+}
+footer .navigations {
+  display: flex;
+  justify-content: space-between;
+}
+footer .navigations .links h3 {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+footer .navigations .links ul a {
+  display: block;
+  text-decoration: none;
+  color: #F4F1EC;
+  padding: 10px 20px 10px 0;
+  margin-top: 5px;
+}
+footer .navigations .links ul a:hover {
+  text-decoration: underline;
+  color: #A28140;
+}
+footer .navigations .dropdown {
+  font-size: 16px;
+}
+footer .navigations .dropdown label {
+  font-size: inherit;
+  display: block;
+  margin-bottom: 20px;
+}
+footer .navigations .dropdown select {
+  cursor: pointer;
+  font-size: inherit;
+  width: 150px;
+  height: 25px;
+  outline: none;
+}
+footer img {
+  display: block;
+  margin: 50px auto;
+}
+footer p {
+  text-align: center;
+  line-height: 25px;
+}
+
 /*# sourceMappingURL=styles.css.map */
