--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,43 +1,77 @@
 .hero {
     padding-inline: 10%;
     background-color: $black;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
 
-    &__content {
-       width: 50%;
-        h1 {
-            font-size: 48px;
-            font-weight: 500;
-            line-height: 1.3em;
-            margin-bottom: 30px;
-        }
+    .container {
+        max-width: 1600px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        margin-inline: auto;
 
-        p {
-            font-size: 20px;
-            font-weight: 600;
-            letter-spacing: 1px;
-            line-height: 1.5em;
-            margin-bottom: 60px;
-        }
+        &__content {
+            width: 50%;
 
-        button {
-            font-family: inherit;
-            font-size: 16px;
-            font-weight: 500;
-            border: none;
-            background-color: $gold;
-            color: $white;
-            padding: 10px 20px;
-            cursor: pointer;
-            
-            i {
-                margin-left: 10px;
+            h1 {
+                font-size: 48px;
+                font-weight: 500;
+                line-height: 1.3em;
+                margin-bottom: 30px;
             }
 
-            &:hover {
-                background-color: $bordeaux;
+            p {
+                font-size: 20px;
+                font-weight: 600;
+                letter-spacing: 1px;
+                line-height: 1.5em;
+                margin-bottom: 60px;
+            }
+
+            button {
+                font-family: inherit;
+                font-size: 16px;
+                font-weight: 500;
+                border: none;
+                background-color: $gold;
+                color: $white;
+                padding: 10px 20px;
+                cursor: pointer;
+
+                i {
+                    margin-left: 10px;
+                }
+
+                &:hover {
+                    background-color: $bordeaux;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 1170px) {
+
+    .hero {
+        padding-top: 60px;
+
+        .container {
+            flex-direction: column;
+            align-items: flex-start;
+
+            &__content {
+                width: 100%;
+
+                button {
+                    margin-bottom: 50px;
+                }
+            }
+
+            &__image {
+                margin-inline: auto;
+
+                img {
+                    width: 100%;
+                }
             }
         }
     }
