Make highlights section responsive

--- a/scss/_highlights.scss
+++ b/scss/_highlights.scss
@@ -2,60 +2,78 @@
     background-color: $white;
     padding: 70px 10%;
 
-    &__content {
-        margin-bottom: 70px;
+    .container {
+        max-width: 1600px;
+        margin-inline: auto;
 
-        h1 {
-            font-size: 48px;
-            font-weight: 500;
-            color: $gold;
-            margin-bottom: 30px;
-        }
-        p {
-            font-size: 20px;
-            font-weight: 600;
-            line-height: 30px;
-            color: $black;
-        }
-    }
+        &__content {
+            margin-bottom: 70px;
 
-    &__gallery {
-        display: flex;
-        justify-content: space-between;
-
-        .post {
-            width: min-content;
-            h3 {
-                font-size: 20px;
-                font-weight: 600;
+            h1 {
+                font-size: 48px;
+                font-weight: 500;
                 color: $gold;
-                margin: 12px 0;
+                margin-bottom: 30px;
             }
 
             p {
-                font-size: 14px;
+                font-size: 20px;
                 font-weight: 600;
-                line-height: 25px;
+                line-height: 30px;
                 color: $black;
             }
+        }
 
-            button {
-                display: block;
-                font-family: inherit;
-                font-size: 16px;
-                font-weight: 500;
-                border: none;
-                background-color: $gold;
-                color: $white;
-                padding: 5px 10px;
-                cursor: pointer;
-                margin-left: auto;
-                margin-top: 30px;
+        &__gallery {
+            display: flex;
+            justify-content: space-between;
 
-                &:hover {
-                    background-color: $bordeaux;
+            .post {
+                width: min-content;
+
+                h3 {
+                    font-size: 20px;
+                    font-weight: 600;
+                    color: $gold;
+                    margin: 12px 0;
+                }
+
+                p {
+                    font-size: 14px;
+                    font-weight: 600;
+                    line-height: 25px;
+                    color: $black;
+                }
+
+                button {
+                    display: block;
+                    font-family: inherit;
+                    font-size: 16px;
+                    font-weight: 500;
+                    border: none;
+                    background-color: $gold;
+                    color: $white;
+                    padding: 5px 10px;
+                    cursor: pointer;
+                    margin-left: auto;
+                    margin-top: 30px;
+
+                    &:hover {
+                        background-color: $bordeaux;
+                    }
                 }
             }
+        }
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .highlights {
+
+        .container__gallery {
+            flex-direction: column;
+            gap: 50px;
+            align-items: center;
         }
     }
 }
