--- a/scss/_about.scss
+++ b/scss/_about.scss
@@ -2,52 +2,75 @@
     background-color: $gold;
     padding: 70px 10%;
 
-    .caption {
-        margin-bottom: 60px;
-        
-        h1 {
-            font-size: 48px;
-            font-weight: 500;
-            color: $white;
-            margin-bottom: 20px;
-        }
+    .container {
+        max-width: 1600px;
+        margin-inline: auto;
 
-        p {
-            font-size: 20px;
-            font-weight: 600;
-            letter-spacing: 1px;
-        }
-    }
+        .caption {
+            margin-bottom: 60px;
 
-    .content {
-        display: flex;
-        gap: 80px;
-        
-        &__text {
-            width: 100%;
-            height: 100%;
-
-            h3 {
-                font-size: 20px;
-                font-weight: 600;
+            h1 {
+                font-size: 48px;
+                font-weight: 500;
+                color: $white;
                 margin-bottom: 20px;
-                line-height: 25px;
             }
 
             p {
-                font-size: 14px;
+                font-size: 20px;
                 font-weight: 600;
-                line-height: 25px;
                 letter-spacing: 1px;
             }
+        }
 
-            &__container:not(:last-child) {
-                margin-bottom: 50px;
+        .content {
+            display: flex;
+            gap: 80px;
+
+            &__text {
+                width: 100%;
+                height: 100%;
+
+                h3 {
+                    font-size: 20px;
+                    font-weight: 600;
+                    margin-bottom: 20px;
+                    line-height: 25px;
+                }
+
+                p {
+                    font-size: 14px;
+                    font-weight: 600;
+                    line-height: 25px;
+                    letter-spacing: 1px;
+                }
+
+                &__container:not(:last-child) {
+                    margin-bottom: 50px;
+                }
+            }
+
+            &__image {
+                width: 100%;
+                object-fit: contain;
             }
         }
+    }
+}
+
+@media screen and (max-width: 1250px) {
+    .about .container .content {
+        flex-direction: column;
 
         &__image {
-            width: 100%;
+            width: 50%;
+            margin-inline: auto;
         }
+    }
+}
+
+@media screen and (max-width: 900px) {
+    .about .content__image {
+        width: 100% !important;
     }
 }
